--- a/game_engine_architecture/第一章 导论.md
+++ b/game_engine_architecture/第一章 导论.md
@@ -43,3 +43,30 @@
 
 
 
+## 1.3 游戏引擎是什么
+
+通常情况下，游戏引擎指可复用的软件，不需大量修改就能成为多款游戏的基础
+
+游戏和引擎的区别较为模糊，二者的定义也常互相转移，一种可能的分辨方法如下：
+
+- 数据驱动架构：若一个软件包含硬编码逻辑或游戏规则，或者使用特例代码去渲染特定游戏对象，则大概率不是引擎
+
+
+
+## 1.4 Engine Differences across Genres
+
+Main talk about different genres of games have specific demands for engine.
+
+- FPS
+- Platformers and Other Third-Person Games
+- Fighting Games
+- Racing Games
+- Strategy Games
+- Massively Multiplayer Online Games (MMOG)
+- Player-Authored Content
+- VR/AR/MR
+- Other
+
+
+
+# 1.5Game Engine Survey
